update bib file

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,8 +4,7 @@
 	doi = {10.1007/978-3-642-53926-8_20},
 	abstract = {We compare the performance of an intensity based nonparametric image registration algorithm and extensions applied to frame interpolation of mouth images. The mouth exhibits large deformations due to different shapes, additionally some facial features occlude others, e.g. the lips cover the teeth. The closures and disclosures represent a challenging problem, which cannot be solved by the traditional image registration algorithms. 
  
-The tested extensions include local regularizer weight adaptation, incorporation of landmarks, self-occlusion handling and penalization of folds, which have all been examined with different weight parameters. 
- 
+The tested extensions include local regularizer weight adaptation, incorporation of landmarks, self-occlusion handling and penalization of folds, which have all been examined with different weight parameters.  
 Since the performance of these algorithms and extensions turns out to be superior in case of mouth closures, we provide an algorithm for the automatic selection of deformable template and static reference image for the registration procedure. Subjective tests show that the quality of results for interpolation of mouth images is enhanced by this proposal.},
 	booktitle = {{PSIVT} {Workshops}},
 	author = {Grasshof, Stella and Ostermann, J.},
@@ -23,8 +22,7 @@ Since the performance of these algorithms and extensions turns out to be superio
 	month = may,
 	year = {2015},
 	keywords = {Estimation, Face, face recognition, feature extraction, Shape, Three-dimensional displays, correlation methods, Solid modeling, Topology, parameter estimation, Candide-3, facial feature points, Facial features, human faces, mean square error methods, average mean squared error, correlation analysis, face parameter estimation, face topology, mesh deforms, model vertices, topology preserving prior, triangular mesh configurations, unnatural configurations},
-	pages = {584--587},
-	file = {IEEE Xplore Abstract Record:C\:\\Users\\stell\\Zotero\\storage\\PVU8Z8KK\\7153259.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\YFRKBT2Z\\Grasshof et al. - 2015 - Estimation of face parameters using correlation an.pdf:application/pdf},
+	pages = {584--587}
 }
 
 @inproceedings{grashof_apathy_2017,
@@ -36,8 +34,7 @@ Since the performance of these algorithms and extensions turns out to be superio
 	month = may,
 	year = {2017},
 	keywords = {Face, face recognition, Shape, Three-dimensional displays, emotion recognition, Databases, computer graphics, Trajectory, Tensile stress, tensors, human face, statistical model, Arrays, expression classification, expression subspace, facial expression natural modelling, facial shapes, fourth-order moment tensor, linear trajectory, tensor factorisation model},
-	pages = {658--665},
-	file = {IEEE Xplore Abstract Record:C\:\\Users\\stell\\Zotero\\storage\\BP96YKYK\\7961804.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\HZKZB6Y5\\Graßhof et al. - 2017 - Apathy Is the Root of All Expressions.pdf:application/pdf},
+	pages = {658--665}
 }
 
 @inproceedings{grashof_projective_2017,
@@ -49,8 +46,7 @@ Since the performance of these algorithms and extensions turns out to be superio
 	month = may,
 	year = {2017},
 	keywords = {face recognition, Shape, Three-dimensional displays, image sequences, Solid modeling, image reconstruction, Tensile stress, Two dimensional displays, least squares approximations, Cameras, Image reconstruction, nonrigid structure-from-motion, 2D input image sequences, alternating-least-squares approach, facial motion, projective structure, sparse 2D landmarks, time-varying 3D structures},
-	pages = {298--301},
-	file = {IEEE Xplore Abstract Record:C\:\\Users\\stell\\Zotero\\storage\\BLKBPH7V\\7986860.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\58YRR4QA\\Graßhof et al. - 2017 - Projective structure from facial motion.pdf:application/pdf},
+	pages = {298--301}
 }
 
 @inproceedings{awiszus_unsupervised_2018,
@@ -63,8 +59,7 @@ Since the performance of these algorithms and extensions turns out to be superio
 	year = {2018},
 	note = {ISSN: 2160-7516},
 	keywords = {Estimation, Face, face recognition, feature extraction, Three-dimensional displays, emotion recognition, facial expression intensity estimation, image sequences, Databases, Gold, video signal processing, Facial features, facial movements, facial shapes, Principal component analysis, action unit labels, expression intensity, expression trajectory, face video sequences, person-specific differences},
-	pages = {1199--11998},
-	file = {Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\GHVY7GA9\\Awiszus et al. - 2018 - Unsupervised Features for Facial Expression Intens.pdf:application/pdf;IEEE Xplore Abstract Record:C\:\\Users\\stell\\Zotero\\storage\\RJXPAAVZ\\8575310.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\DKWPQCXT\\Awiszus et al. - 2018 - Unsupervised Features for Facial Expression Intens.pdf:application/pdf;Snapshot:C\:\\Users\\stell\\Zotero\\storage\\C8S8Z8QN\\Awiszus_Unsupervised_Features_for_CVPR_2018_paper.html:text/html},
+	pages = {1199--11998}
 }
 
 @phdthesis{grashof_expressive_2019,
@@ -76,8 +71,7 @@ Since the performance of these algorithms and extensions turns out to be superio
 	urldate = {2021-01-25},
 	school = {Leibniz University of Hannover},
 	author = {Graßhof, Stella},
-	year = {2019},
-	file = {Snapshot:C\:\\Users\\stell\\Zotero\\storage\\CT588RQF\\expressive-personalized-3d-face-models-from-3d-face-scans.html:text/html},
+	year = {2019}
 }
 
 
@@ -93,8 +87,7 @@ Since the performance of these algorithms and extensions turns out to be superio
 	year = {2019},
 	note = {ISSN: 2473-9944},
 	keywords = {face recognition, Shape, Three-dimensional displays, emotion recognition, image reconstruction, matrix algebra, Covariance matrices, Two dimensional displays, statistical analysis, image motion analysis, iterative methods, independent subspace analysis, uncalibrated nonrigid factorisation, Cameras, Image reconstruction, 2D point correspondences, affine cameras, affine reconstruction, face expression data, independent 3D shape bases, Independent subspace analysis, ISA, Matrix decomposition, Non rigid structure from motion, nonrigid objects, prior-free approach, statistically independent, structure-from-motion problem},
-	pages = {569--578},
-	file = {IEEE Xplore Abstract Record:C\:\\Users\\stell\\Zotero\\storage\\TP7SVBQD\\9022195.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\69CF2BY3\\Brandt et al. - 2019 - Uncalibrated Non-Rigid Factorisation by Independen.pdf:application/pdf},
+	pages = {569--578}
 }
 
 
@@ -109,8 +102,6 @@ Since the performance of these algorithms and extensions turns out to be superio
 	year = {2020},
 	note = {Conference Name: IEEE Transactions on Pattern Analysis and Machine Intelligence},
 	keywords = {Shape, Three-dimensional displays, Data models, Solid modeling, Tensile stress, Two dimensional displays, 3D-reconstruction, Analytical models, expression transfer, HOSVD, person transfer, Statistical shape model, tensor model},
-	pages = {1--1},
-	file = {IEEE Xplore Abstract Record:C\:\\Users\\stell\\Zotero\\storage\\4LSNAF8M\\9067086.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\TZTX3E43\\Grasshof et al. - 2020 - Multilinear Modelling of Faces and Expressions.pdf:application/pdf},
 }
 
 
@@ -129,8 +120,7 @@ Since the performance of these algorithms and extensions turns out to be superio
 	year = {2021},
 	note = {Conference Name: IEEE Transactions on Pattern Analysis and Machine Intelligence},
 	keywords = {Shape, Three-dimensional displays, Data models, Solid modeling, Tensile stress, Two dimensional displays, 3D-reconstruction, Analytical models, expression transfer, HOSVD, person transfer, Statistical shape model, tensor model},
-	pages = {3540--3554},
-	file = {IEEE Xplore Abstract Record:C\:\\Users\\stell\\Zotero\\storage\\EDQIQ7TY\\9067086.html:text/html;IEEE Xplore Abstract Record:C\:\\Users\\stell\\Zotero\\storage\\EK2C2FZA\\9067086.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\LPY9PUKX\\Grasshof et al. - 2021 - Multilinear Modelling of Faces and Expressions.pdf:application/pdf;IEEE Xplore Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\P4Q8LKN7\\Grasshof et al. - 2021 - Multilinear Modelling of Faces and Expressions.pdf:application/pdf},
+	pages = {3540--3554}
 }
 
 @inproceedings{haas_tensor-based_2021,
@@ -159,8 +149,7 @@ Since the performance of these algorithms and extensions turns out to be superio
 	author = {Bastholm, Mathias and Graßhof, Stella and Brandt, Sami},
 	month = feb,
 	year = {2022},
-	pages = {24--30},
-	file = {Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\UZHWCAV9\\Bastholm et al. - 2022 - Neural Network-based Human Motion Smoother.pdf:application/pdf;Snapshot:C\:\\Users\\stell\\Zotero\\storage\\GW7TPP63\\107905.html:text/html},
+	pages = {24--30}
 }
 
 
@@ -175,8 +164,7 @@ Since the performance of these algorithms and extensions turns out to be superio
 	year = {2022},
 	note = {ISSN: 2642-9381},
 	keywords = {Shape, Three-dimensional displays, Computational modeling, Solid modeling, Transforms, Structure from motion, Image and Video Synthesis, Tensors, 3D Computer Vision Computational Photography, Datasets, Evaluation and Comparison of Vision Algorithms, Learning and Optimization, Statistical Methods},
-	pages = {2254--2263},
-	file = {Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\7KZQK3GG\\Graßhof and Brandt - 2022 - Tensor-Based Non-Rigid Structure From Motion.pdf:application/pdf;Graßhof and Brandt - 2022 - Tensor-Based Non-Rigid Structure from Motion.pdf:C\:\\Users\\stell\\Zotero\\storage\\BMJZBFN4\\Graßhof and Brandt - 2022 - Tensor-Based Non-Rigid Structure from Motion.pdf:application/pdf;IEEE Xplore Abstract Record:C\:\\Users\\stell\\Zotero\\storage\\MDRNMLKI\\9706729.html:text/html;Snapshot:C\:\\Users\\stell\\Zotero\\storage\\QBED5HNU\\Grasshof_Tensor-Based_Non-Rigid_Structure_From_Motion_WACV_2022_paper.html:text/html},
+	pages = {2254--2263}
 }
 
 @inproceedings{haas_tensor-based_2022,
@@ -190,8 +178,7 @@ Since the performance of these algorithms and extensions turns out to be superio
 	month = may,
 	year = {2022},
 	note = {arXiv:2205.06102 [cs]},
-	keywords = {Computer Science - Computer Vision and Pattern Recognition},
-	file = {arXiv Fulltext PDF:C\:\\Users\\stell\\Zotero\\storage\\K4PX6WWC\\Haas et al. - 2022 - Tensor-based Emotion Editing in the StyleGAN Laten.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\stell\\Zotero\\storage\\LVQCTE3F\\2205.html:text/html},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition}
 }
 
 @techreport{haas_controllable_2022,
@@ -207,8 +194,7 @@ Since the performance of these algorithms and extensions turns out to be superio
 	doi = {10.48550/arXiv.2211.07195},
 	note = {arXiv:2211.07195 [cs]
 type: article},
-	keywords = {Computer Science - Computer Vision and Pattern Recognition},
-	file = {arXiv Fulltext PDF:C\:\\Users\\stell\\Zotero\\storage\\M9QCN4D6\\Haas et al. - 2022 - Controllable GAN Synthesis Using Non-Rigid Structu.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\stell\\Zotero\\storage\\4C6JWUFW\\2211.html:text/html},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition}
 }
 
 
@@ -227,8 +213,7 @@ type: article},
 	month = sep,
 	year = {2023},
 	keywords = {Computer vision, Recurrent neural networks, Animation denoising, Reconstruction},
-	pages = {760},
-	file = {Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\PS5WXRM8\\Graßhof et al. - 2023 - Neural Network-Based Human Motion Predictor and Sm.pdf:application/pdf},
+	pages = {760}
 }
 
 @inproceedings{haas_controllable_2023,
@@ -238,8 +223,7 @@ type: article},
 	urldate = {2023-10-02},
 	author = {Haas, René and Graßhof, Stella and Brandt, Sami S.},
 	year = {2023},
-	pages = {678--687},
-	file = {Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\RCQB9HZZ\\Haas et al. - 2023 - Controllable GAN Synthesis Using Non-Rigid Structu.pdf:application/pdf},
+	pages = {678--687}
 }
 
 
@@ -256,6 +240,5 @@ type: article},
 	year = {2023},
 	note = {ISSN: 2160-7516},
 	keywords = {Computer architecture, Data models, Dynamics, Pattern recognition, Skeleton, Transformers, Visualization},
-	pages = {5199--5208},
-	file = {IEEE Xplore Abstract Record:C\:\\Users\\stell\\Zotero\\storage\\6YUPIKD3\\10208321.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\stell\\Zotero\\storage\\TFE2UFTG\\Ibh et al. - 2023 - TemPose a new skeleton-based transformer model de.pdf:application/pdf},
+	pages = {5199--5208}
 }
