update: about, bibliography, posts, news

--- a/_news/news_2023_11_24.md
+++ b/_news/news_2023_11_24.md
@@ -5,6 +5,4 @@ inline: true
 related_posts: false
 ---
 
-Today was the defense of the very first student I had the pleasure to officially co-supervise as a PhD student: René Haas, and I could not be prouder. 
-Shortly, after I started working at ITU 2019 we started working together with Sami S. Brandt, on a research project, followed by a Master thesis. This lead to a proposal for a PhD project, which got accepted. Today René defended his thesis with great success. 
-A big thank you also to the committee! 
+Today René Haas defended his PhD thesis!
