--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,27 +1,27 @@
 
-@inproceedings{grasshof_performance_2013,
+@inproceedings{grashof_performance_2013,
 	title = {Performance of {Image} {Registration} and {Its} {Extensions} for {Interpolation} of {Facial} {Motion}},
 	doi = {10.1007/978-3-642-53926-8_20},
 	abstract = {We compare the performance of an intensity based nonparametric image registration algorithm and extensions applied to frame interpolation of mouth images. The mouth exhibits large deformations due to different shapes, additionally some facial features occlude others, e.g. the lips cover the teeth. The closures and disclosures represent a challenging problem, which cannot be solved by the traditional image registration algorithms. 
  
-The tested extensions include local regularizer weight adaptation, incorporation of landmarks, self-occlusion handling and penalization of folds, which have all been examined with different weight parameters.  
+The tested extensions include local regularizer weight adaptation, incorporation of landmarks, self-occlusion handling and penalization of folds, which have all been examined with different weight parameters. 
+ 
 Since the performance of these algorithms and extensions turns out to be superior in case of mouth closures, we provide an algorithm for the automatic selection of deformable template and static reference image for the registration procedure. Subjective tests show that the quality of results for interpolation of mouth images is enhanced by this proposal.},
 	booktitle = {{PSIVT} {Workshops}},
-	author = {Grasshof, Stella and Ostermann, J.},
+	author = {Graßhof, Stella and Ostermann, J.},
 	year = {2013},
-	keywords = {optical flow, facial motion, frame interpolation, nonparametric image registration, numeric optimization, variational}
+	keywords = {facial motion, frame interpolation, nonparametric image registration, numeric optimization, optical flow, variational}
 }
 
-
-@inproceedings{grasshof_estimation_2015,
+@inproceedings{grashof_estimation_2015,
 	title = {Estimation of face parameters using correlation analysis and a topology preserving prior},
 	doi = {10.1109/MVA.2015.7153259},
 	abstract = {Candide-3 is a well-known model, used to represent triangular meshes of human faces. It is common to only estimate 17 to 21 of the 79 model parameters. We show that these are insufficient to fit model vertices to facial feature points with low error and if more parameters are estimated, the model mesh deforms to unnatural configurations. To overcome this problem, we propose a novel solution: Given facial feature points, we propose to estimate the model parameters in subsets in which they are uncorrelated. Additionally we present a term to penalize topologically incorrect triangular mesh configurations. As a result the average mean squared error between facial feature points and model vertices is reduced by 90\%, while face topology is preserved.},
 	booktitle = {2015 14th {IAPR} {International} {Conference} on {Machine} {Vision} {Applications} ({MVA})},
-	author = {Grasshof, Stella and Ackermann, Hanno and Ostermann, Jörn},
+	author = {Graßhof, Stella and Ackermann, Hanno and Ostermann, Jörn},
 	month = may,
 	year = {2015},
-	keywords = {Estimation, Face, face recognition, feature extraction, Shape, Three-dimensional displays, correlation methods, Solid modeling, Topology, parameter estimation, Candide-3, facial feature points, Facial features, human faces, mean square error methods, average mean squared error, correlation analysis, face parameter estimation, face topology, mesh deforms, model vertices, topology preserving prior, triangular mesh configurations, unnatural configurations},
+	keywords = {average mean squared error, Candide-3, correlation analysis, correlation methods, Estimation, Face, face parameter estimation, face recognition, face topology, facial feature points, Facial features, feature extraction, human faces, mean square error methods, mesh deforms, model vertices, parameter estimation, Shape, Solid modeling, Three-dimensional displays, Topology, topology preserving prior, triangular mesh configurations, unnatural configurations},
 	pages = {584--587}
 }
 
@@ -58,24 +58,8 @@ Since the performance of these algorithms and extensions turns out to be superio
 	month = jun,
 	year = {2018},
 	note = {ISSN: 2160-7516},
-	keywords = {Estimation, Face, face recognition, feature extraction, Three-dimensional displays, emotion recognition, facial expression intensity estimation, image sequences, Databases, Gold, video signal processing, Facial features, facial movements, facial shapes, Principal component analysis, action unit labels, expression intensity, expression trajectory, face video sequences, person-specific differences},
-	pages = {1199--11998}
+	keywords = {Estimation, Face, face recognition, feature extraction, Three-dimensional displays, emotion recognition, facial expression intensity estimation, image sequences, Databases, Gold, video signal processing, Facial features, facial movements, facial shapes, Principal component analysis, action unit labels, expression intensity, expression trajectory, face video sequences, person-specific differences}
 }
-
-@phdthesis{grashof_expressive_2019,
-	type = {Doktorarbeit},
-	title = {Expressive {Personalized} {3D} {Face} {Models} from {3D} {Face} {Scans}},
-	url = {https://www.vdi-nachrichten.com/shop/expressive-personalized-3d-face-models-from-3d-face-scans/},
-	abstract = {In this work, different methods are presented to create 3D face models from databases of 3D face scans. The challenge in this endeavour is to balance the limited training data with the high demands of various applications. The 3D scans stem from various persons showing different expressions, with varying number of points per 3D scan […]},
-	language = {en},
-	urldate = {2021-01-25},
-	school = {Leibniz University of Hannover},
-	author = {Graßhof, Stella},
-	year = {2019}
-}
-
-
-
 
 @inproceedings{brandt_uncalibrated_2019,
 	title = {Uncalibrated {Non}-{Rigid} {Factorisation} by {Independent} {Subspace} {Analysis}},
@@ -91,23 +75,19 @@ Since the performance of these algorithms and extensions turns out to be superio
 }
 
 
-
-@article{grasshof_multilinear_2020,
-	title = {Multilinear {Modelling} of {Faces} and {Expressions}},
-	issn = {1939-3539},
-	doi = {10.1109/TPAMI.2020.2986496},
-	abstract = {In this work, we present a new versatile 3D multilinear statistical face model, based on a tensor factorisation of 3D face scans, that decomposes the shapes into person and expression subspaces. Investigation of the expression subspace reveals an inherent low-dimensional substructure, and further, a star-shaped structure. This is due to two novel findings: (1) increasing the strength of one emotion approximately forms a linear trajectory in the subspace. (2) All these trajectories intersect at a single point not at the neutral expression as assumed by almost all prior works but at an apathetic expression. We utilise these structural findings by reparameterising the expression subspace by the fourth-order moment tensor centred at the point of apathy. We propose a 3D face reconstruction method from single or multiple 2D projections by assuming an uncalibrated projective camera model. The non-linearity caused by the perspective projection can be neatly included into the model. The proposed algorithm separates person and expression subspaces convincingly, and enables flexible, natural modelling of expressions for a wide variety of human faces. Applying the method on independent faces showed that morphing between different persons and expressions can be performed without strong deformations.},
-	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-	author = {Grasshof, Stella and Ackermann, Hanno and Brandt, Sami and Ostermann, Joern},
-	year = {2020},
-	note = {Conference Name: IEEE Transactions on Pattern Analysis and Machine Intelligence},
-	keywords = {Shape, Three-dimensional displays, Data models, Solid modeling, Tensile stress, Two dimensional displays, 3D-reconstruction, Analytical models, expression transfer, HOSVD, person transfer, Statistical shape model, tensor model},
+@phdthesis{grashof_expressive_2019,
+	type = {Doktorarbeit},
+	title = {Expressive {Personalized} {3D} {Face} {Models} from {3D} {Face} {Scans}},
+	url = {https://www.vdi-nachrichten.com/shop/expressive-personalized-3d-face-models-from-3d-face-scans/},
+	abstract = {In this work, different methods are presented to create 3D face models from databases of 3D face scans. The challenge in this endeavour is to balance the limited training data with the high demands of various applications. The 3D scans stem from various persons showing different expressions, with varying number of points per 3D scan […]},
+	language = {en},
+	urldate = {2021-01-25},
+	school = {Leibniz University of Hannover},
+	author = {Graßhof, Stella},
+	year = {2019}
 }
 
-
-
-
-@article{grasshof_multilinear_2021,
+@article{grashof_multilinear_2021,
 	title = {Multilinear {Modelling} of {Faces} and {Expressions}},
 	volume = {43},
 	issn = {1939-3539},
@@ -115,28 +95,27 @@ Since the performance of these algorithms and extensions turns out to be superio
 	abstract = {In this work, we present a new versatile 3D multilinear statistical face model, based on a tensor factorisation of 3D face scans, that decomposes the shapes into person and expression subspaces. Investigation of the expression subspace reveals an inherent low-dimensional substructure, and further, a star-shaped structure. This is due to two novel findings. (1) Increasing the strength of one emotion approximately forms a linear trajectory in the subspace. (2) All these trajectories intersect at a single point – not at the neutral expression as assumed by almost all prior works—but at an apathetic expression. We utilise these structural findings by reparameterising the expression subspace by the fourth-order moment tensor centred at the point of apathy. We propose a 3D face reconstruction method from single or multiple 2D projections by assuming an uncalibrated projective camera model. The non-linearity caused by the perspective projection can be neatly included into the model. The proposed algorithm separates person and expression subspaces convincingly, and enables flexible, natural modelling of expressions for a wide variety of human faces. Applying the method on independent faces showed that morphing between different persons and expressions can be performed without strong deformations.},
 	number = {10},
 	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-	author = {Grasshof, Stella and Ackermann, Hanno and Brandt, Sami Sebastian and Ostermann, Jörn},
+	author = {Graßhof, Stella and Ackermann, Hanno and Brandt, Sami Sebastian and Ostermann, Jörn},
 	month = oct,
 	year = {2021},
-	note = {Conference Name: IEEE Transactions on Pattern Analysis and Machine Intelligence},
-	keywords = {Shape, Three-dimensional displays, Data models, Solid modeling, Tensile stress, Two dimensional displays, 3D-reconstruction, Analytical models, expression transfer, HOSVD, person transfer, Statistical shape model, tensor model},
-	pages = {3540--3554}
+	note = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+	keywords = {3D-reconstruction, Analytical models, Data models, expression transfer, HOSVD, person transfer, Shape, Solid modeling, Statistical shape model, Tensile stress, tensor model, Three-dimensional displays, Two dimensional displays},
+	pages = {3540--3554},
+    selected={true}
 }
 
-@inproceedings{haas_tensor-based_2021,
+@article{haas_tensor-based_2021,
 	title = {Tensor-based {Subspace} {Factorization} for {StyleGAN}},
 	doi = {10.1109/FG52635.2021.9666953},
 	abstract = {In this paper, we propose TGAN a tensor-based method for modeling the latent space of generative models. The objective is to identify semantic directions in latent space. To this end, we propose to fit a multilinear tensor model on a structured facial expression database, which is initially embedded into latent space. We validate our approach on StyleGAN trained on FFHQ using BU-3DFE as a structured facial expression database. We show how the parameters of the multilinear tensor model can be approximated by Alternating Least Squares. Further, we introduce a stacked style-separated tensor model, defined as an ensemble of style-specific models to integrate our approach with the extended latent space of StyleGAN. We show that taking the individual styles of the extended latent space into account leads to higher model flexibility and lower reconstruction error. Finally, we do several experiments comparing our approach to former work on both GANs and multilinear models. Concretely, we analyze the expression subspace and find that the expression trajectories meet at an apathetic face that is consistent with earlier work. We also show that by changing the pose of a person, the generated image from our approach is closer to the ground truth than results from two competing approaches.},
-	booktitle = {2021 16th {IEEE} {International} {Conference} on {Automatic} {Face} and {Gesture} {Recognition} ({FG} 2021)},
+	booktitle = {16th {IEEE} {International} {Conference} on {Automatic} {Face} and {Gesture} {Recognition} ({FG} 2021)},
 	author = {Haas, René and Graßhof, Stella and Brandt, Sami S.},
 	month = dec,
 	year = {2021},
-	keywords = {Computer Science - Computer Vision and Pattern Recognition, Face recognition, Semantics, Databases, Measurement, Tensors, Codes, Stability analysis},
-	pages = {1--8}
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, Face recognition, Semantics, Databases, Measurement, Tensors, Codes, Stability analysis}
 }
 
-
-@inproceedings{bastholm_neural_2022,
+@article{bastholm_neural_2022,
 	title = {Neural {Network}-based {Human} {Motion} {Smoother}},
 	volume = {2},
 	isbn = {978-989-758-549-4},
@@ -177,26 +156,9 @@ Since the performance of these algorithms and extensions turns out to be superio
 	author = {Haas, René and Graßhof, Stella and Brandt, Sami S.},
 	month = may,
 	year = {2022},
-	note = {arXiv:2205.06102 [cs]},
+	note = {WS CVPR},
 	keywords = {Computer Science - Computer Vision and Pattern Recognition}
 }
-
-@techreport{haas_controllable_2022,
-	title = {Controllable {GAN} {Synthesis} {Using} {Non}-{Rigid} {Structure}-from-{Motion}},
-	url = {http://arxiv.org/abs/2211.07195},
-	abstract = {In this paper, we present an approach for combining non-rigid structure-from-motion (NRSfM) with deep generative models,and propose an efficient framework for discovering trajectories in the latent space of 2D GANs corresponding to changes in 3D geometry. Our approach uses recent advances in NRSfM and enables editing of the camera and non-rigid shape information associated with the latent codes without needing to retrain the generator. This formulation provides an implicit dense 3D reconstruction as it enables the image synthesis of novel shapes from arbitrary view angles and non-rigid structure. The method is built upon a sparse backbone, where a neural regressor is first trained to regress parameters describing the cameras and sparse non-rigid structure directly from the latent codes. The latent trajectories associated with changes in the camera and structure parameters are then identified by estimating the local inverse of the regressor in the neighborhood of a given latent code. The experiments show that our approach provides a versatile, systematic way to model, analyze, and edit the geometry and non-rigid structures of faces.},
-	number = {arXiv:2211.07195},
-	urldate = {2022-11-15},
-	institution = {arXiv},
-	author = {Haas, René and Graßhof, Stella and Brandt, Sami S.},
-	month = nov,
-	year = {2022},
-	doi = {10.48550/arXiv.2211.07195},
-	note = {arXiv:2211.07195 [cs]
-type: article},
-	keywords = {Computer Science - Computer Vision and Pattern Recognition}
-}
-
 
 @article{grashof_neural_2023,
 	title = {Neural {Network}-{Based} {Human} {Motion} {Predictor} and {Smoother}},
@@ -212,20 +174,9 @@ type: article},
 	author = {Graßhof, Stella and Bastholm, Mathias and Brandt, Sami S.},
 	month = sep,
 	year = {2023},
-	keywords = {Computer vision, Recurrent neural networks, Animation denoising, Reconstruction},
-	pages = {760}
+	keywords = {Computer vision, Recurrent neural networks, Animation denoising, Reconstruction}, 
+	preview={human_motion1.png}
 }
-
-@inproceedings{haas_controllable_2023,
-	title = {Controllable {GAN} {Synthesis} {Using} {Non}-{Rigid} {Structure}-{From}-{Motion}},
-	url = {https://openaccess.thecvf.com/content/CVPR2023W/GCV/html/Haas_Controllable_GAN_Synthesis_Using_Non-Rigid_Structure-From-Motion_CVPRW_2023_paper.html},
-	language = {en},
-	urldate = {2023-10-02},
-	author = {Haas, René and Graßhof, Stella and Brandt, Sami S.},
-	year = {2023},
-	pages = {678--687}
-}
-
 
 @inproceedings{ibh_tempose_2023,
 	title = {{TemPose}: a new skeleton-based transformer model designed for fine-grained motion recognition in badminton},
@@ -235,10 +186,61 @@ type: article},
 	abstract = {This paper presents TemPose, a novel skeleton-based transformer model designed for fine-grained motion recognition to improve understanding of the detailed player actions in badminton. The model utilizes multiple temporal and interaction layers to capture variable-length multi-person human actions while minimizing reliance on non-human visual context. TemPose is evaluated on two fine-grained badminton datasets, where it significantly outperforms other baseline models by incorporating additional input streams, such as the shuttlecock position, into the temporal transformer layers of the model. Additionally, TemPose demonstrates great versatility by achieving competitive results compared to other state-of-the-art skeleton-based models on the large-scale action recognition benchmark NTU RGB+D. Experiments are conducted to explore how different model parameter configurations affect Tem-Pose’s performance. Additionally, a qualitative analysis of the temporal attention maps suggests that the model learns to prioritize frames of specific poses relevant to different actions while formulating an intuition of each individual’s importance in the sequences. Overall, TemPose is an intuitive and versatile architecture that has the potential to be further developed and incorporated into other methods for managing human motion in sports with state-of-the-art results.},
 	urldate = {2024-02-25},
 	booktitle = {2023 {IEEE}/{CVF} {Conference} on {Computer} {Vision} and {Pattern} {Recognition} {Workshops} ({CVPRW})},
-	author = {Ibh, Magnus and Grasshof, Stella and Witzner, Dan and Madeleine, Pascal},
+	author = {Ibh, Magnus and Graßhof, Stella and Witzner, Dan and Madeleine, Pascal},
 	month = jun,
 	year = {2023},
 	note = {ISSN: 2160-7516},
 	keywords = {Computer architecture, Data models, Dynamics, Pattern recognition, Skeleton, Transformers, Visualization},
-	pages = {5199--5208}
+	pages = {5199--5208},
+    selected={true}
+}
+
+@inproceedings{haas_controllable_2023,
+	title = {Controllable {GAN} {Synthesis} {Using} {Non}-{Rigid} {Structure}-from-{Motion}},
+	isbn = {9798350302493},
+	url = {https://www.computer.org/csdl/proceedings-article/cvprw/2023/024900a678/1PBx8PtXdE4},
+	doi = {10.1109/CVPRW59228.2023.00075},
+	booktitle = {2023 {IEEE}/{CVF} {Conference} on {Computer} {Vision} and {Pattern} {Recognition} {Workshops} ({CVPRW})},
+	abstract = {In this paper, we present an approach for combining non-rigid structure-from-motion (NRSfM) with deep generative models, and propose an efficient framework for discovering trajectories in the latent space of 2D GANs corresponding to changes in 3D geometry. Our approach uses recent advances in NRSfM and enables editing of the camera and non-rigid shape information associated with the latent codes without needing to retrain the generator. This formulation provides an implicit dense 3D reconstruction as it enables the image synthesis of novel shapes from arbitrary view angles and non-rigid structure. The method is built upon a sparse backbone, where a neural regressor is first trained to regress parameters describing the cameras and sparse non-rigid structure directly from the latent codes. The latent trajectories associated with changes in the camera and structure parameters are then identified by estimating the local inverse of the regressor in the neighborhood of a given latent code. The experiments show that our approach provides a versatile, systematic way to model, analyze, and edit the geometry and non-rigid structures of faces.},
+	language = {English},
+	publisher = {IEEE Computer Society},
+	author = {Haas, René and Graßhof, Stella and Brandt, Sami S.},
+	month = jun,
+	year = {2023},
+	pages = {678--687},
+    selected={true}
+}
+
+@inproceedings{marnet_bridging_2024,
+	title = {Bridging the {Sim}-to-{Real} {GAP} for {Underwater} {Image} {Segmentation}},
+	abstract = {Labeling images for every new task or data pattern a model needs to learn is a significant time bottleneck in real-world applications. Moreover, acquiring the necessary data for training the models can be challenging. Ideally, one would train the models with simulated images and adapt them for the desired real tasks using the least possible amount of data. Active learning can be used to solve this problem with minimal effort. In this work, we train SegFormer for pipeline segmentation with synthetic images from an underwater simulated environment and fine-tune the model with real underwater pipeline images recorded in a marina. 
+The evaluation shows that selecting real data with active learning for fine-tuning the model gives better results than randomly selecting the images. As part of the work, we release the dataset recorded in the marina, MarinaPipe, which will be publicly available.},
+	author = {Marnet, Luiza Ribeiro and Graßhof, Stella and Brodskiy, Yuri and Wąsowski, Andrzej},
+	month = may,
+	year = {2024},
+	booktitle = {Oceans}
+}
+
+@inproceedings{marnet_uncertainty_2024,
+	title = {Uncertainty {Driven} {Active} {Learning} for {Image} {Segmentation} in {Underwater} {Inspection}},
+	abstract = {Active learning aims to select the minimum amount of data to train a model that performs similarly to a model trained with the entire dataset. We study the potential of active learning for image segmentation in underwater infrastructure inspection tasks, where large amounts of data are typically collected. The pipeline inspection images are usually semantically repetitive but with great variations in quality. We use mutual information as the acquisition function, calculated using Monte Carlo dropout. HyperSeg is trained using active learning with an underwater pipeline inspection dataset of over 50,000 images. To allow reproducibility and assess the framework's effectiveness, the CamVid dataset was also utilized. For the pipeline dataset, HyperSeg with active learning achieved 67.5\% meanIoU using 12.5\% of the data, and 61.4
+\% with the same amount of randomly selected images. This shows that using active learning for segmentation models in underwater inspection tasks can lower the cost significantly.},
+	author = {Marnet, Luiza Ribeiro and Graßhof, Stella and Brodskiy, Yuri and Wąsowski, Andrzej},
+	month = mar,
+	year = {2024},
+	booktitle = {ROBOVIS}
+}
+
+@inproceedings{haas_discovering_2024,
+	title = {Discovering {Interpretable} {Directions} in the {Semantic} {Latent} {Space} of {Diffusion} {Models}},
+	abstract = {Denoising Diffusion Models (DDMs) have emerged as a strong competitor to Generative Adversarial Networks (GANs).
+However, despite their widespread use in image synthesis and editing applications, their latent space is still not as well understood. Recently, a semantic latent space for DDMs, coined `h-space', was shown to facilitate semantic image editing in a way reminiscent of GANs. The h-space is comprised of the bottleneck activations in the DDM's denoiser across all timesteps of the diffusion process. In this paper, we explore the properties of h-space and propose several novel methods for finding meaningful semantic directions within it. We start by studying unsupervised methods for revealing interpretable semantic directions in pretrained DDMs. Specifically, we show that interpretable directions emerge as the principal components in the latent space. Additionally, we provide a novel method for discovering image-specific semantic directions by spectral analysis of the Jacobian of the denoiser w.r.t. the latent code. 
+Next, we extend the analysis by finding directions in a supervised fashion in unconditional DDMs.
+We demonstrate how such directions can be found by annotating generated samples with a domain-specific attribute classifier. 
+We further show how to semantically disentangle the found directions by simple linear projection.
+Our approaches are applicable without requiring any architectural modifications, text-based guidance, CLIP-based optimization, or model fine-tuning.},
+	author = {Haas, René and Huberman-Spiegelglas, Inbar and Mulayoff, Rotem and Brandt, Sami and Graßhof, Stella and Michaeli, Tomer},
+	month = may,
+	year = {2024},
+	booktitle = {18th IEEE International Conference on Automatic Face and Gesture Recognition}	
 }
