minor update - news, and about

--- a/_news/news_2024_02_10.md
+++ b/_news/news_2024_02_10.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-Luiza got two papers accepted at two conferences!
+Luiza got two papers accepted! One at [ROBOVIS](https://robovis.scitevents.org/?y=2024), and another at [Oceans](https://singapore24.oceansconference.org/). You can meet her there!
