added details for publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -60,6 +60,7 @@ The evaluation shows that selecting real data with active learning for fine-tuni
 	keywords = {Computer architecture, Data models, Dynamics, Pattern recognition, Skeleton, Transformers, Visualization},
 	pages = {5199--5208},
     selected={true},
+	preview={2023_magnus_cvpr2.png},
 	pdf={2023_Ibh_cvprw_tempose.pdf}
 }
 
@@ -77,7 +78,9 @@ The evaluation shows that selecting real data with active learning for fine-tuni
 	year = {2023},
 	pages = {678--687},
     selected={true},
-	website={https://github.com/renhaa/rankonegan}
+	website={https://github.com/renhaa/rankonegan},
+	preview={2023_rene_cvpr.png},
+	pdf={2023_haas_cvprw.pdf}
 }
 
 
