--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -211,7 +211,8 @@ The evaluation shows that selecting real data with active learning for fine-tuni
 	year = {2018},
 	note = {ISSN: 2160-7516},
 	keywords = {Estimation, Face, face recognition, feature extraction, Three-dimensional displays, emotion recognition, facial expression intensity estimation, image sequences, Databases, Gold, video signal processing, Facial features, facial movements, facial shapes, Principal component analysis, action unit labels, expression intensity, expression trajectory, face video sequences, person-specific differences},
-	preview={temp_align_main_direction_pca_ax.png}
+	preview={temp_align_main_direction_pca_ax.png},
+	pdf={2018_awiszus_cvpr.pdf}
 }
 
 
