--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 
 @inproceedings{ibh_tempose_2024,
 	title = {A stroke of genius: Predicting the next move in badminton},
-	abstract = {This paper presents, \textit{RallyTemPose}, a transformer encoder-decoder model for predicting future badminton strokes based on previous rally actions. The model uses court position, skeleton poses, and player-specific embeddings to learn stroke and player-specific latent representations in a spatiotemporal encoder module. The representations are then used to condition the subsequent strokes in a decoder module through rally-aware fusion blocks, which provide additional relevant strategic and technical considerations to make more informed predictions. RallyTemPose shows improved forecasting accuracy compared to traditional sequential methods on two real-world badminton datasets. The performance boost can also be attributed to the inclusion of improved stroke embeddings extracted from the latent representation of a pre-trained large-language model subjected to detailed text descriptions of stroke descriptions. In the discussion, the latent representations learned by the encoder module show useful properties regarding player analysis and comparisons.},
+	abstract = {This paper presents, {RallyTemPose}, a transformer encoder-decoder model for predicting future badminton strokes based on previous rally actions. The model uses court position, skeleton poses, and player-specific embeddings to learn stroke and player-specific latent representations in a spatiotemporal encoder module. The representations are then used to condition the subsequent strokes in a decoder module through rally-aware fusion blocks, which provide additional relevant strategic and technical considerations to make more informed predictions. RallyTemPose shows improved forecasting accuracy compared to traditional sequential methods on two real-world badminton datasets. The performance boost can also be attributed to the inclusion of improved stroke embeddings extracted from the latent representation of a pre-trained large-language model subjected to detailed text descriptions of stroke descriptions. In the discussion, the latent representations learned by the encoder module show useful properties regarding player analysis and comparisons.},
 	booktitle = {2024 {IEEE}/{CVF} {Conference} on {Computer} {Vision} and {Pattern} {Recognition} {Workshops} ({CVPRW})},
 	author = {Ibh, Magnus and Graßhof, Stella and Witzner, Dan},
 	month = jun,
@@ -36,12 +36,14 @@ The evaluation shows that selecting real data with active learning for fine-tuni
 
 @inproceedings{marnet_uncertainty_2024,
 	title = {Uncertainty {Driven} {Active} {Learning} for {Image} {Segmentation} in {Underwater} {Inspection}},
-	abstract = {Active learning aims to select the minimum amount of data to train a model that performs similarly to a model trained with the entire dataset. We study the potential of active learning for image segmentation in underwater infrastructure inspection tasks, where large amounts of data are typically collected. The pipeline inspection images are usually semantically repetitive but with great variations in quality. We use mutual information as the acquisition function, calculated using Monte Carlo dropout. HyperSeg is trained using active learning with an underwater pipeline inspection dataset of over 50,000 images. To allow reproducibility and assess the framework's effectiveness, the CamVid dataset was also utilized. For the pipeline dataset, HyperSeg with active learning achieved 67.5\% meanIoU using 12.5\% of the data, and 61.4
-\% with the same amount of randomly selected images. This shows that using active learning for segmentation models in underwater inspection tasks can lower the cost significantly.},
+	abstract = {Active learning aims to select the minimum amount of data to train a model that performs similarly to a model trained with the entire dataset. We study the potential of active learning for image segmentation in underwater infrastructure inspection tasks, where large amounts of data are typically collected. The pipeline inspection images are usually semantically repetitive but with great variations in quality. We use mutual information as the acquisition function, calculated using Monte Carlo dropout. HyperSeg is trained using active learning with an underwater pipeline inspection dataset of over 50,000 images. To allow reproducibility and assess the framework's effectiveness, the CamVid dataset was also utilized. For the pipeline dataset, HyperSeg with active learning achieved 67.5% meanIoU using 12.5% of the data, and 61.4
+% with the same amount of randomly selected images. This shows that using active learning for segmentation models in underwater inspection tasks can lower the cost significantly.},
 	author = {Marnet, Luiza Ribeiro and Graßhof, Stella and Brodskiy, Yuri and Wąsowski, Andrzej},
 	month = mar,
 	year = {2024},
-	booktitle = {ROBOVIS}
+	booktitle = {Proceedings of the 4th International Conference on Robotics, Computer Vision and Intelligent Systems (ROBOVIS)},
+	pdf={2024_marnet_robovis.pdf},
+	preview={2024_marnet_robovis.png}
 }
 
 
@@ -61,7 +63,8 @@ The evaluation shows that selecting real data with active learning for fine-tuni
 	pages = {5199--5208},
     selected={true},
 	preview={2023_magnus_cvpr2.png},
-	pdf={2023_Ibh_cvprw_tempose.pdf}
+	pdf={2023_Ibh_cvprw_tempose.pdf},
+	website={https://github.com/MagnusPetersenIbh/TemPose-BadmintonActionRecognition/tree/main}
 }
 
 @inproceedings{haas_controllable_2023,
