--- a/_news/news_2023_11_24.md
+++ b/_news/news_2023_11_24.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-Today René Haas defended his PhD thesis!
+Today René Haas [defended his PhD thesis](http://stellagrasshof.com/blog/2023/rene_defense/) with the title [Deep Generative Models for Faces and Expressions](http://stellagrasshof.com/projects/3_project/)!
