--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@ Our findings show that Inception V3 slightly outperforms MobileNet V2, which sug
 	author = {Ibh, Magnus and Graßhof, Stella and Witzner, Dan, and Madeleine, Pascal},
 	month = jun,
 	year = {2024},
-        selected={true},
+    selected={true},
 	website={https://github.com/MagnusPetersenIbh/RallyTemPose-Predicting-the-next-stroke-in-badminton}
 }
 
@@ -37,6 +37,9 @@ Our approaches are applicable without requiring any architectural modifications,
 	year = {2024},
 	booktitle = {18th IEEE International Conference on Automatic Face and Gesture Recognition},
 	website={https://github.com/renhaa/semantic-diffusion},
+	pdf={2024_haas_fg.pdf},
+	poster={2024_haas_fg_poster.pdf},
+	preview={2024_haas_fg.png},
     selected={true}
 }
 
@@ -52,15 +55,22 @@ The evaluation shows that selecting real data with active learning for fine-tuni
 }
 
 @inproceedings{marnet_uncertainty_2024,
-	title = {Uncertainty {Driven} {Active} {Learning} for {Image} {Segmentation} in {Underwater} {Inspection}},
-	abstract = {Active learning aims to select the minimum amount of data to train a model that performs similarly to a model trained with the entire dataset. We study the potential of active learning for image segmentation in underwater infrastructure inspection tasks, where large amounts of data are typically collected. The pipeline inspection images are usually semantically repetitive but with great variations in quality. We use mutual information as the acquisition function, calculated using Monte Carlo dropout. HyperSeg is trained using active learning with an underwater pipeline inspection dataset of over 50,000 images. To allow reproducibility and assess the framework's effectiveness, the CamVid dataset was also utilized. For the pipeline dataset, HyperSeg with active learning achieved 67.5% meanIoU using 12.5% of the data, and 61.4
-% with the same amount of randomly selected images. This shows that using active learning for segmentation models in underwater inspection tasks can lower the cost significantly.},
-	author = {Marnet, Luiza Ribeiro and Graßhof, Stella and Brodskiy, Yuri and Wąsowski, Andrzej},
-	month = mar,
-	year = {2024},
-	booktitle = {Proceedings of the 4th International Conference on Robotics, Computer Vision and Intelligent Systems (ROBOVIS)},
-	pdf={2024_marnet_robovis.pdf},
-	preview={2024_marnet_robovis.png}
+author="Ribeiro Marnet, Luiza
+and Brodskiy, Yury
+and Grasshof, Stella
+and W{\k{a}}sowski, Andrzej",
+editor="Filipe, Joaquim
+and R{\"o}ning, Juha",
+title="Uncertainty Driven Active Learning for Image Segmentation in Underwater Inspection",
+booktitle="Robotics, Computer Vision and Intelligent Systems",
+year="2024",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="66--81",
+abstract="Active learning aims to select the minimum amount of data to train a model that performs similarly to a model trained with the entire dataset. We study the potential of active learning for image segmentation in underwater infrastructure inspection tasks, where large amounts of data are typically collected. The pipeline inspection images are usually semantically repetitive but with great variations in quality. We use mutual information as the acquisition function, calculated using Monte Carlo dropout. HyperSeg is trained using active learning with an underwater pipeline inspection dataset of over 50,000 images. To allow reproducibility and assess the framework's effectiveness, the CamVid dataset was also utilized. For the pipeline dataset, HyperSeg with active learning achieved 67.5{\%} meanIoU using 12.5{\%} of the data, and 61.4{\%} with the same amount of randomly selected images. This shows that using active learning for segmentation models in underwater inspection tasks can lower the cost significantly.",
+isbn="978-3-031-59057-3",
+pdf={2024_marnet_robovis.pdf},
+preview={2024_marnet_robovis.png}
 }
 
 
