--- a/_news/news_2023_11_24.md
+++ b/_news/news_2023_11_24.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-Today René Haas [defended his PhD thesis](http://stellagrasshof.com/blog/2023/rene_defense/) with the title [Deep Generative Models for Faces and Expressions](http://stellagrasshof.com/projects/3_project/)!
+[Today](https://en.itu.dk/Research/PhD-Programme/PhD-Defences/PhD-Defences-2023/November/Rene-Haas) [René Haas](https://www.linkedin.com/in/haasrene/?originalSubdomain=dk) [defended his PhD thesis](http://stellagrasshof.com/blog/2023/rene_defense/) with the title [Deep Generative Models for Faces and Expressions](http://stellagrasshof.com/projects/3_project/)!
