added drafts and assets

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,6 +21,8 @@ Our findings show that Inception V3 slightly outperforms MobileNet V2, which sug
 	month = jun,
 	year = {2024},
     selected={true},
+	pdf={2024_ibh_cvprws.pdf},
+	preview={2024_magnus_cvpr.png},
 	website={https://github.com/MagnusPetersenIbh/RallyTemPose-Predicting-the-next-stroke-in-badminton}
 }
 
