--- a/_drafts/2024-06-30-pihole.md
+++ b/_drafts/2024-06-30-pihole.md
@@ -1,11 +1,58 @@
 ---
 layout: post
-title: How to block advertisement
+title: How to block (most) ads on the net
 date: 2024-06-20 18:30:00
 description: If you want to get rid of advertisement while surfing, you might want to read this.
-tags: productivity
+tags: fail
 categories: tools
 code_diff: true
 ---
 
-Pi-hole
+* toc line
+{:toc}
+
+The internet is full of ads, and mostly
+
+how to block ads at home with Pi-hole
+
+RaspberryPi
+
+I followed the instructions on [this website](https://www.raspberrypi.com/tutorials/running-pi-hole-on-a-raspberry-pi/). 
+However, since websites are due to change, I will collect the most relevant steps here. (no guarantees)
+
+# Hardware Raspberry Pi
+So which hardware do you need?
+
+# Setting up Raspberry Pi
+
+# Setting up Pi-hole
+- type "pihole status" to check if it is running
+
+# Final 
+Does it work?
+- check [this](https://adblock-tester.com/) page. My advise is to check this before, and after you started the raspberry pi, and verify that the score is higher after.
+- You should also be able to log into the [pi-hole admin interface](http://pi.hole/admin/index.php), once everything is running.
+
+# Problems and Solutions
+
+1. Problem: Computer crash
+When I first attempted to flash the OS on the SD card, my Windows computer would always crash, and I received a blue screen.
+After looking around, it seemed to be a common problem with some Windows computers.
+Solution: If possible I recommend trying another computer. I guess I should have worked on my Linux machine. However, because I am stubborn, I eventually succeeded when I closed *all* other programs. Finally, after several attempts the installation was successful.
+2. Problem: SLOW
+The Pi Zero 2W has 512M of memory and you may not have enough swap space to do the update.
+
+From a Terminal window, enter the command "swapon". The answer gives the file name, size, and usage of the swap file.
+
+The default swap file size is 100M and that probably is not sufficient with 512M memory.
+
+Edit the file /etc/dphys-swapfile and change CONF_SWAPSIZE=100 to 1024. Reboot and then before doing anything enter the command "swapon" in a terminal window to see the swap space usage.
+cite from [here](https://forums.raspberrypi.com/viewtopic.php?t=359240).
+3. Problem: raspberry does not boot
+Finally, you are all set, and maybe want to use the raspberry pi without a connection to a display. When I did that, I encountered the problem that the raspberry pi did not fully boot.
+I found out that this can happen without a monitor plugged into hdmi.
+However, there is a solution. 
+Adding hdmi_force_hotplug=1 to /boot/firmware/config.txt seems to have solved the problem.
+
+[source](https://forums.raspberrypi.com/viewtopic.php?t=253312)
+
